# llama-nexus

./: Cargo.toml  README.md  chat_history.db  check_code_before_commit.sh  config.toml  demo.sh  pretest.md  rust-toolchain.toml  rustfmt.toml
.github/workflows/: build.yml  release.yml  test_server.yml
doc/: mcp-server-config.md  rag-search-guide.md  search.md  start-llama-nexus.sh
src/: config.rs  database.rs  error.rs  handlers.rs  info.rs  main.rs  mcp.rs  rag.rs  server.rs  utils.rs
tests/: test_chat.hurl  test_transcribe.hurl  test_translate.hurl
