[package]
name    = "LlamaNexus"
version = "0.5.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.82"
axum = { version = "^0.8", features = ["tokio", "http2", "multipart"] }
bitflags = "2.8.0"
bytes = "1.10.1"
cardea-elastic-mcp-common = { git = "https://github.com/cardea-mcp/gaia-mcp-servers.git", rev = "227458e5" }
cardea-kwsearch-mcp-common = { git = "https://github.com/cardea-mcp/gaia-mcp-servers.git", rev = "227458e5" }
cardea-qdrant-mcp-common = { git = "https://github.com/cardea-mcp/gaia-mcp-servers.git", rev = "227458e5" }
cardea-tidb-mcp-common = { git = "https://github.com/cardea-mcp/gaia-mcp-servers.git", rev = "227458e5" }
chat-prompts = { version = "0.31.5" }
clap = { version = "^4.5", features = ["cargo", "derive"] }
config = { version = "^0.15", features = ["toml"] }
endpoints = { version = "0.33.0", features = ["whisper", "rag", "index"] }
futures-util = "0.3"
http = "1.2"
mime_guess = "2.0.4"
once_cell = "1.18"
qdrant = { package = "qdrant_rest_client", version = "0.2.1" }
reqwest = { version = "^0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", rev = "a62c6d1d", features = [
    "client",
    "transport-sse-client",
    "reqwest",
    "transport-streamable-http-client",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
text-splitter = { version = "^0.24", features = ["tiktoken-rs", "markdown"] }
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7.13"
tower = { version = "^0.5", features = ["util"] }
tower-http = { version = "^0.6", features = ["trace", "cors", "request-id", "fs"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["v4"] }

[[bin]]
name = "llama-nexus"
path = "src/main.rs"
